--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/router": "^15.1.4",
     "bootstrap": "^4.6.0",
     "rxjs": "^7.8.0",
+    "serverless-auto-swagger": "^2.12.0",
     "tslib": "^2.5.0",
     "zone.js": "^0.12.0"
   },
@@ -73,7 +74,9 @@
     "pretty-quick": "^3.1.3",
     "protractor": "~7.0.0",
     "serverless-finch": "^4.0.1",
+    "serverless-openapi-documentation": "^0.4.0",
     "serverless-single-page-app-plugin": "file:./serverless-single-page-app-plugin",
+    "serverless-webpack": "^5.11.0",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.5"
   },
