--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "@angular/platform-browser": "^15.1.4",
     "@angular/platform-browser-dynamic": "^15.1.4",
     "@angular/router": "^15.1.4",
+    "aws-sdk": "^2.1372.0",
     "bootstrap": "^4.6.0",
     "rxjs": "^7.8.0",
     "serverless-auto-swagger": "^2.12.0",
     "tslib": "^2.5.0",
+    "uuid": "^9.0.0",
     "zone.js": "^0.12.0"
   },
   "devDependencies": {
